# sentinel

./: .gitignore  Makefile  README.md
backend/: package-lock.json  package.json  tsconfig.json
backend/src/: config.ts  index.ts  server.ts
backend/src/broadcast/: broadcaster.ts
backend/src/domains/events/: event.model.ts  event.routes.ts  event.service.test.ts  event.service.ts  event.store.ts
backend/src/domains/timeline/: timeline.model.ts  timeline.service.ts  timeline.store.ts
backend/src/domains/vehicles/: vehicle.model.ts  vehicle.routes.ts  vehicle.service.ts  vehicle.store.ts
backend/src/ws/: frontend-clients.ts  sentinel-clients.ts
docs/superpowers/plans/: 2026-04-02-sentinel-mvp.md
docs/superpowers/specs/: 2026-04-03-atom-viz-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: http.ts  ws.ts
frontend/src/hooks/: useWebSocket.ts
frontend/src/store/: events.store.ts  timeline.store.ts  ui.store.ts  vehicles.store.ts
frontend/src/types/: index.ts
scripts/: spawn_mocks.py
sentinel-mock/: pyproject.toml
sentinel-mock/sentinel/: config.py  main.py
sentinel-mock/sentinel/models/: __init__.py  events.py  status.py
sentinel-mock/sentinel/policy/: decision_engine.py  reason_codes.py
sentinel-mock/sentinel/reporting/: reporter.py
sentinel-mock/sentinel/simulation/: route_simulator.py  vehicle_state.py
sentinel-mock/sentinel/transport/: event_publisher.py  ws_client.py
sentinel-mock/tests/: test_decision_engine.py
(+28 files in other folders)
