[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-mock"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = ["websockets==12.0"]

[project.scripts]
sentinel-mock = "sentinel.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel*"]
